Updated button handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">A1ShakeDetector</string>
     <string name="action_settings">Settings</string>
-    <string name="edit_message">Settings</string>
+    <string name="edit_message">Number 8 - 25</string>
     <string name="button_one">Start</string>
     <string name="button_two">Stop</string>
     <string name="textView1">The 3D acceleration values are:</string>
-    <string name="textView2">data</string>
+    <string name="textView2">N/A</string>
     <string name="textView3">The Shake Detector detects:</string>
-    <string name="textView4">The Shake Detector detects:</string>
+    <string name="textView4">Please input a value between 8 and 25.</string>
+    <string name="shake">SHAKE</string>
+    <string name="noshake">NO SHAKE</string>
 </resources>
